Add firebase hosting

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^19.2.5",
     "@angular/compiler": "^19.2.5",
     "@angular/core": "^19.2.5",
+    "@angular/fire": "^19.0.0",
     "@angular/forms": "^19.2.5",
     "@angular/material": "^19.2.8",
     "@angular/platform-browser": "^19.2.5",
@@ -22,6 +23,7 @@
     "@angular/router": "^19.2.5",
     "@ngrx/effects": "^19.1.0",
     "@ngrx/store": "^19.1.0",
+    "firebase": "^11.6.0",
     "ngx-skeleton-loader": "^10.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
